src/test/ui/nll/issue-31567.stderr
error[E0713]: borrow may still be in use when destructor runs
  --> $DIR/issue-31567.rs:22:26
   |
LL |     let s_inner: &'a S = &*v.0; //~ ERROR borrow may still be in use when destructor runs [E0713]
   |                          ^^^^^
LL |     &s_inner.0
LL | }
   | - here, drop of `v` needs exclusive access to `*v.0`, because the type `VecWrapper<'_>` implements the `Drop` trait
   |
note: borrowed value must be valid for the lifetime 'a as defined on the function body at 21:17...
  --> $DIR/issue-31567.rs:21:17
   |
LL | fn get_dangling<'a>(v: VecWrapper<'a>) -> &'a u32 {
   |                 ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0713`.
